<resources>
    <string name="app_name">ADC App</string>
    <string name="request_doula">REQUEST A DOULA</string>
    <string name="apply_as_doula">APPLY AS A DOULA</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="maybe">MAYBE</string>
    <string name="prev">PREVIOUS</string>
    <string name="next">NEXT</string>

    <!--    SIGN UP PAGE-->
    <string name="sign_up">Sign Up</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="already_have_an_account">Already have an account?</string>

    <!--    DOULA QUESTIONS PAGE-->
    <string name="doula_q1">Would you like to meet your doula in person before delivery?</string>
    <string name="doula_questions">Doula Questions</string>
    <string name="doula_q2">Would you like your doula to make a home visit after delivery? (within 2-14 days following delivery)</string>
    <string name="personal_info">Personal Info</string>

    <!--    CURRENT BIRTH INFORMATION PAGE-->
    <string name="current_birth_information">Current Birth Information</string>
    <string name="birthdate">Birthday (MM/DD/YYYY)</string>
    <string name="birth_location">Planned Birth Location</string>
    <string name="ifOther">If other, enter name here</string>
    <string name="birthType">Birth Type: </string>
    <string name="singleton">Singleton </string>
    <string name="twins">Twins </string>
    <string name="three_or_more">3 or more </string>
    <string name="current_birth_q1">Are you planning to have/do you want to have an epidural?</string>
    <string name="current_birth_q2">Are you expecting to have a cesarean sections (C-section)?</string>
    <string name="request_sent">Request Sent!</string>
    <string name="your_request_has_been_sent_staff_at_the_emory_university_urban_health_initiative_will_match_you_with_the_doula_best_for_you_expect_to_hear_from_your_doula_within_a_few_days">Your request has been sent! Staff at the Emory University Urban Health Initiative will match you with the doula best for you. Expect to hear from your doula within a few days.</string>
    <string name="return_home">RETURN HOME</string>

    <!-- PREVIOUS BIRTH INFO PAGE -->
    <string name="previous_birth_info">Previous Birth Information</string>
    <string name="prev_births_1">Number of Previous Births: </string>
    <string name="prev_births_2">Were any of your previous live births: </string>
    <string name="preterm">Preterm (less than 37 weeks gestation):</string>
    <string name="low_birth_weight">Low Birth Weight (less than 5lbs 8oz):</string>
    <string name="previous_birth_types">Previous Birth Types (check all that apply)</string>
    <string name="vaginal_births">Vaginal Births</string>
    <string name="cesarean">Cesarean</string>
    <string name="vbac">Vaginal Birth after C-Section (VBAC)</string>
    <string name="previous_twins_triplets">Have you previously had twins or triplets?</string>


    <!--    PHOTO RELEASE PAGE-->
    <string name="photo_release">Photo Release</string>
    <string name="photo_release_t1">Please read the following statements:</string>
    <string name="photo_release_t2">I, grant the Urban Health Initiative of Emory Photo/Video permission to use any photographs in Emory’s own publications or in any other broadcast, print, or electronic media, including—without limitation—newspaper, radio, television, magazine, internet. I waive any right to inspect or approve my depictions in these works.</string>
    <string name="photo_release_t3">I agree that Emory University may use such photographs of me and my infant with or without my name and for any lawful  purpose, including for example such purposes as publicity, illustration, advertising, and Web content.</string>
    <string name="photo_release_t4">I agree to the statements above</string>
    <string name="finish">FINISH</string>
    <string name="review_and_submit">Review and Submit</string>
    <string name="name">Name:</string>
    <string name="birthday">Birthday:</string>
    <!--    <string name="phone">Phone:</string>-->
    <string name="personal_information">Personal Information</string>
    <!--    <string name="phone_2_optional">Phone 2 (Optional):</string>-->
    <!--    <string name="phone_2_optional">Phone 2 (Optional):</string>-->
    <!--    <string name="phone">Phone:</string>-->
    <string name="phone_2_optional">Phone 2 (Optional):</string>
    <!--    <string name="relationship">Relationship:</string>-->
    <!--    <string name="relationship">Relationship:</string>-->
    <string name="phone">Phone:</string>
    <string name="emergency_contacts">Emergency Contacts</string>
    <string name="previous_birth_information">Previous Birth Information</string>
    <string name="emergency_contact_1">Emergency Contact 1</string>
    <string name="emergency_contact_2">Emergency Contact 2</string>
    <string name="due_date">Due Date:</string>
    <string name="planned_birth_location">Planned Birth Location:</string>
    <string name="birth_type">Birth Type:</string>
    <string name="relationship">relationship</string>
    <string name="atlanta_doula_connect">Atlanta Doula Connect</string>
    <string name="emory_university_logo">Emory University Logo</string>
    <string name="log_in">LOG IN</string>
    <string name="learn_more">Learn More</string>
    <string name="relationship1">Relationship:</string>

    <string name="submit">SUBMIT</string>
    <string name="edit">EDIT</string>

</resources>
