<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PhotoReleaseActivity">

    <TextView
        android:id="@+id/photoRelease"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/photo_release"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.058" />

    <LinearLayout
        android:id="@+id/fillbar"
        android:layout_width="300dp"
        android:layout_height="5dp"
        android:layout_marginTop="12dp"
        android:background="@color/white"
        android:backgroundTint="@color/yellow"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/fillstatus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/photoRelease"
        app:layout_constraintVertical_bias="0.05" />

    <LinearLayout
        android:id="@+id/fillstatus"
        android:layout_width="300dp"
        android:layout_height="5dp"
        android:layout_marginTop="12dp"
        android:background="@color/skyBlue"
        android:backgroundTint="@color/skyBlue"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/photo_release_t1"
        app:layout_constraintEnd_toEndOf="@+id/fillbar"
        app:layout_constraintStart_toStartOf="@+id/fillbar"
        app:layout_constraintTop_toBottomOf="@+id/photoRelease"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintHorizontal_bias="0.0"/>

    <TextView
        android:id="@+id/photo_release_t1"
        android:layout_width="303dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/photo_release_t1"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/photoRelease"
        app:layout_constraintVertical_bias="0.076" />

    <TextView
        android:id="@+id/photo_release_t2"
        android:layout_width="303dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/photo_release_t2"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/photo_release_t1"
        app:layout_constraintVertical_bias="0.042" />

    <TextView
        android:id="@+id/photo_release_t3"
        android:layout_width="303dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/photo_release_t3"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/photo_release_t2"
        app:layout_constraintVertical_bias="0.073" />

    <CheckBox
        android:id="@+id/photo_release_checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/photo_release_t4"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/photo_release_t3"
        app:layout_constraintVertical_bias="0.08" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/prev_button_photo_release"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prev"
        app:backgroundTint="@color/emoryBlue"
        android:layout_marginStart="76dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/finish_button_photo_release"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finish"
        app:backgroundTint="@color/yellow"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/prev_button_photo_release" />

</androidx.constraintlayout.widget.ConstraintLayout>