<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <com.google.android.material.button.MaterialButton
        android:id="@+id/log_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="250dp"
        android:height="80dp"
        android:background="@color/yellow"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/log_in"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:backgroundTint="@color/yellow"
        app:cornerRadius="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/apply_as_doula_button"
        app:layout_constraintVertical_bias="0.132" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/request_doula_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="344dp"
        android:width="250dp"
        android:height="80dp"
        android:background="@color/mediumBlue"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/request_doula"
        android:textSize="20sp"
        app:backgroundTint="@color/mediumBlue"
        app:cornerRadius="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adcText" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/apply_as_doula_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="250dp"
        android:height="80dp"
        android:background="@color/lightBlue"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/apply_as_doula"
        android:textSize="20sp"
        app:backgroundTint="@color/lightBlue"
        app:cornerRadius="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/request_doula_button"
        app:layout_constraintVertical_bias="0.103" />

    <TextView
        android:id="@+id/adcText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/spectral"
        android:text="@string/atlanta_doula_connect"
        android:textColor="@color/logoBlue"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="389dp"
        android:layout_height="151dp"
        android:contentDescription="@string/emory_university_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.008"
        app:srcCompat="@drawable/emory_logo_horizontal" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/learn_more_button"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="150dp"
        android:height="70dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/learn_more"
        android:textAllCaps="false"
        android:textColor="@color/lightBlue"
        android:textSize="16sp"
        app:cornerRadius="35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log_in_button"
        app:layout_constraintVertical_bias="0.3"
        app:strokeColor="@color/lightBlue"
        app:strokeWidth="3dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="205dp" />

</androidx.constraintlayout.widget.ConstraintLayout>


